iac/kustomize/base/jit-elevation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jit-elevation
  namespace: identity
spec:
  selector:
    app: jit-elevation
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
